Fix some colors to make them more contrast

--- a/nailgun/static/styles/main.less
+++ b/nailgun/static/styles/main.less
@@ -8,7 +8,7 @@
 @default-label-width: 200px;
 
 // Base Palette
-@base-dark-color:  #394c59;
+@base-dark-color:  #415766;
 @base-light-color: @base-dark-color + #7a746c;
 @base-text-color:  #525960;
 
@@ -52,6 +52,13 @@
 @alert-info-bg:    #c1d4e1;
 @alert-warning-bg: #f2e0b9;
 @alert-danger-bg:  #e8c6c6;
+
+@btn-default: #d4d5d6;
+@btn-success: #43a060;
+@btn-primary: #3879A5;
+@btn-warning: #cfa44e;
+@btn-danger:  #b3584c;
+@btn-info:    #7ab0cc;
 
 @link-color: saturate(lighten(@base-dark-color, 20%), 30%);
 @link-color-hover: saturate(lighten(@base-dark-color, 10%), 15%);
@@ -708,7 +715,7 @@ button, .btn:not(.btn-link) {.font-semibold;}
   li {
     display: inline-block;
     a {
-      color: @blue;
+      color: @blue + 60%;
     }
   }
   li + li {
@@ -897,7 +904,7 @@ button, .btn:not(.btn-link) {.font-semibold;}
 .cluster-page {
   .page-title {
     .title-node-count {
-      color: @blue;
+      color: @blue + 60%;
       display: inline-block;
       font-size: @base-font-size + 4;
       left: 18px;
@@ -937,6 +944,9 @@ button, .btn:not(.btn-link) {.font-semibold;}
     padding-right: 0px;
     padding-top: 20px;
     box-sizing: border-box;
+  }
+  .deploy-btn {
+    padding: 4px 12px 7px;
   }
   .deploy-icon {
     position: relative;
@@ -1198,7 +1208,7 @@ button, .btn:not(.btn-link) {.font-semibold;}
   .control-buttons-box {
     overflow: hidden;
     .btn-group {
-      margin-left: 5px;
+      margin-left: 10px;
       .glyphicon {
         margin-right: 5px;
       }
